wip: start gradio app. change requirements

--- a/pancitos_cambio_colores.ipynb
+++ b/pancitos_cambio_colores.ipynb
@@ -465,12 +465,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The most similar reference image is at index: 1\n"
+      "The most similar reference image is at index: 0\n"
      ]
     }
    ],
    "source": [
-    "your_histograms = histograms_of_masked_img('toasted_bread_dataset/pan1 sin tostar.jpg')\n",
+    "your_histograms = histograms_of_masked_img('toasted_bread_dataset/pan1 medio tostado.jpg')\n",
     "\n",
     "reference_histograms = [\n",
     "    histograms_of_masked_img('toasted_bread_dataset/pan2 medio tostado.jpg'),\n",
@@ -484,12 +484,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-30T14:41:50.205027Z",
-     "start_time": "2024-03-30T14:41:49.677888Z"
+     "end_time": "2024-03-30T15:32:56.188144Z",
+     "start_time": "2024-03-30T15:32:55.510464Z"
     }
    },
    "id": "a0834b2196e4be60",
-   "execution_count": 36
+   "execution_count": 38
   }
  ],
  "metadata": {
