change image names

--- a/first_eda.ipynb
+++ b/first_eda.ipynb
@@ -93,13 +93,13 @@
     "    \n",
     "    return img_lab\n",
     "    \n",
-    "reference_not_toasted_bread = cielab_from('pan1 sin tostar.jpg')\n",
-    "reference_medium_toasted_bread = cielab_from('pan1 medio tostado.jpg')\n",
-    "reference_very_toasted_bread = cielab_from('pan1 tostado.jpg')\n",
+    "reference_not_toasted_bread = cielab_from('pan1_sin tostar.jpg')\n",
+    "reference_medium_toasted_bread = cielab_from('pan1_medio tostado.jpg')\n",
+    "reference_very_toasted_bread = cielab_from('pan1_tostado.jpg')\n",
     "\n",
-    "not_toasted_bread = cielab_from('pan2 sin tostar.jpg')\n",
-    "medium_toasted_bread = cielab_from('pan2 medio tostado.jpg')\n",
-    "very_toasted_bread = cielab_from('pan2 tostado.jpg')"
+    "not_toasted_bread = cielab_from('pan2_sin tostar.jpg')\n",
+    "medium_toasted_bread = cielab_from('pan2_medio tostado.jpg')\n",
+    "very_toasted_bread = cielab_from('pan2_tostado.jpg')"
    ],
    "metadata": {
     "collapsed": false
