--- a/pancitos_cambio_colores.ipynb
+++ b/pancitos_cambio_colores.ipynb
@@ -67,34 +67,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['toasted_bread_dataset/pan1 sin tostar.jpg',\n 'toasted_bread_dataset/pan2 tostado bis.jpg',\n 'toasted_bread_dataset/pan2 sin tostar.jpg',\n 'toasted_bread_dataset/pan1 tostado bis.jpg',\n 'toasted_bread_dataset/pan2 tostado.jpg',\n 'toasted_bread_dataset/pan2 medio tostado.jpg',\n 'toasted_bread_dataset/pan1 tostado.jpg',\n 'toasted_bread_dataset/pan1 medio tostado.jpg']"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "root_images_dir = 'toasted_bread_dataset/'\n",
-    "dataset_paths = [root_images_dir + image_path for image_path in os.listdir(root_images_dir)]\n",
-    "dataset_paths"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-30T13:20:18.695533Z",
-     "start_time": "2024-03-30T13:20:18.689538Z"
-    }
-   },
-   "id": "1fc352291475239e",
-   "execution_count": 2
-  },
-  {
-   "cell_type": "code",
    "outputs": [],
    "source": [
     "def cielab_from_masked_image(image_path):\n",
@@ -129,6 +101,34 @@
    },
    "id": "83e4982b1b6237b8",
    "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['toasted_bread_dataset/pan1 sin tostar.jpg',\n 'toasted_bread_dataset/pan2 tostado bis.jpg',\n 'toasted_bread_dataset/pan2 sin tostar.jpg',\n 'toasted_bread_dataset/pan1 tostado bis.jpg',\n 'toasted_bread_dataset/pan2 tostado.jpg',\n 'toasted_bread_dataset/pan2 medio tostado.jpg',\n 'toasted_bread_dataset/pan1 tostado.jpg',\n 'toasted_bread_dataset/pan1 medio tostado.jpg']"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "root_images_dir = 'toasted_bread_dataset/'\n",
+    "dataset_paths = [root_images_dir + image_path for image_path in os.listdir(root_images_dir)]\n",
+    "dataset_paths"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T13:20:18.695533Z",
+     "start_time": "2024-03-30T13:20:18.689538Z"
+    }
+   },
+   "id": "1fc352291475239e",
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -473,9 +473,9 @@
     "your_histograms = histograms_of_masked_img('toasted_bread_dataset/pan1 medio tostado.jpg')\n",
     "\n",
     "reference_histograms = [\n",
-    "    histograms_of_masked_img('toasted_bread_dataset/pan2 medio tostado.jpg'),\n",
-    "    histograms_of_masked_img('toasted_bread_dataset/pan2 sin tostar.jpg'),\n",
-    "    histograms_of_masked_img('toasted_bread_dataset/pan2 tostado.jpg')\n",
+    "    histograms_of_masked_img('toasted_bread_dataset/pan2_medio_tostado.jpg'),\n",
+    "    histograms_of_masked_img('toasted_bread_dataset/pan2_sin_tostar.jpg'),\n",
+    "    histograms_of_masked_img('toasted_bread_dataset/pan2_tostado.jpg')\n",
     "]\n",
     "\n",
     "most_similar_index = find_most_similar(your_histograms, reference_histograms)\n",
